test/zinc_source/compile_errors/callables/17_captured_assignment_requires_each_out.zn
// expected-error: assignment to captured outer variable 'x' requires 'out x'
fn main() {
    x = 1
    f = fn() {
        out x = x + 1
        x = x + 1
        return x
    }
    print(f())
}
